<resources>
    <string name="app_name">IITK</string>
    <string name="title_activity_new_portal">New Portal</string>
    <string name="title_activity_new_inventory">New Inventory</string>
    <string name="title_activity_login">Login to IITK</string>
    <string name="title_activity_settings">Settings</string>
    <string name="trans_fab">transition_fab</string>
    <string name="portal_item_no_location">No location&#8230;</string>
    <string name="permissions_camera">We need permission to write to external storage to save Portal photos and access to the camera in case you want to take a photo of the portal.</string>
    <string name="hint_portal_location">Friendly Location</string>
    <string name="hint_name">Name</string>
    <string name="hint_portal_notes">Notes</string>
    <string name="contentDesc_ocrButton">Launch OCR</string>
    <string name="contentDesc_locationButton">Launch Place Picker</string>
    <string name="toast_addPortal_failed">Failed to add portal. Please try again.</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="detail_portal_notes">Notes:</string>
    <string name="detail_portal_date_created">Date created:</string>
    <string name="detail_portal_appbar_title">Portal Details</string>
    <string name="detail_portal_createddate_unavailable">Time created unavailable&#8230;</string>
    <string name="detail_portal_delete_toast">Deleted Portal: %1$s.</string>
    <string name="menu_portal_delete">Delete</string>
    <string name="menu_portal_edit">Edit</string>
    <string name="menu_portal_share">Share&#8230;</string>
    <string name="hint_description">Description</string>
    <string name="select_colour">Select colour:</string>
    <string name="new_inv_preselect_capsules">Select the number of capsules you have:</string>
    <string name="new_inv_preselect_lockers">Select which key lockers you have:</string>
    <string name="open_inventory_cart">Open Inventory Cart</string>
    <string name="removed_from_cart">Removed item from cart.</string>
    <string name="remove_all_from_cart">Removed all items.</string>
    <string name="dialog_title_clear_cart">Clear cart?</string>
    <string name="dialog_message_clear_cart">All items in the cart will be removed.</string>
    <string name="empty_cart">Your cart is empty! Add some items.</string>
    <string name="dialog_title_checkout">Confirm checkout</string>
    <string name="dialog_message_checkout">Are you ready to checkout these items into your inventory?</string>
    <string name="locker_green">Green Key Locker</string>
    <string name="locker_blue">Blue Key Locker</string>
    <string name="locker_white">White Key Locker</string>
    <string name="locker_red">Red Key Locker</string>
    <string name="locker_yellow">Yellow Key Locker</string>
    <string name="locker_anniversary">Anniversary Key Locker</string>
    <string name="capsule_quantum">Quantum Capsule</string>
    <string name="capsule">Capsule</string>
    <string name="portal_key">Portal Key</string>
    <string name="portal_fracker">Portal Fracker</string>
    <string name="beacon">Beacon</string>
    <string name="all">All</string>
    <string name="store">Store</string>
    <string name="capsules_keys">Capsules &amp; Key</string>
    <string name="capsules">Capsules</string>
    <string name="portal_keys">Portal Keys</string>
    <string name="mods">Mods</string>
    <string name="power_cubes">Power Cubes</string>
    <string name="resonators">Resonators</string>
    <string-array name="weapons">
        <item>Xmp Bursters</item>
        <item>Ultra Strikes</item>
        <item>Flip Cards</item>
    </string-array>
    <string-array name="inventory">
        <item>@string/store</item>
        <item>@string/capsules_keys</item>
        <item>@string/mods</item>
        <item>@string/power_cubes</item>
        <item>@string/resonators</item>
        <item>@string/weapons</item>
    </string-array>
    <string-array name="lockers">
        <item>@string/locker_green</item>
        <item>@string/locker_blue</item>
        <item>@string/locker_white</item>
        <item>@string/locker_red</item>
        <item>@string/locker_yellow</item>
        <item>@string/locker_anniversary</item>
    </string-array>
    <string name="very_common">Very Common</string>
    <string name="common">Common</string>
    <string name="rare">Rare</string>
    <string name="very_rare">Very Rare</string>
    <string-array name="rarity">
        <item>@string/very_common</item>
        <item>@string/common</item>
        <item>@string/rare</item>
        <item>@string/very_rare</item>
    </string-array>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="l4">L4</string>
    <string name="l5">L5</string>
    <string name="l6">L6</string>
    <string name="l7">L7</string>
    <string name="l8">L8</string>
    <string-array name="levels">
        <item>@string/l1</item>
        <item>@string/l2</item>
        <item>@string/l3</item>
        <item>@string/l4</item>
        <item>@string/l5</item>
        <item>@string/l6</item>
        <item>@string/l7</item>
        <item>@string/l8</item>
    </string-array>
    <string name="section_itoen_transmuters">ITO EN Transmuter</string>
    <string name="section_link_amps">Link Amps</string>
    <string name="section_shields">Portal Shields</string>
    <string name="section_heat_sinks">Heat Sinks</string>
    <string name="section_force_amps">Force Amps</string>
    <string name="section_multi_hacks">Multi-hacks</string>
    <string name="section_turret">Turret</string>
    <string name="itoen_transmuter_minus">ITO EN Transmuter (-)</string>
    <string name="itoem_transmuter_plus">ITO EN Transmuter (+)</string>
    <string name="link_amp">Link Amp</string>
    <string name="softbank_ultra_link">SoftBank Ultra Link</string>
    <string name="shield">Portal Shield</string>
    <string name="shield_aegis">Aegis Shield</string>
    <string name="heat_sink">Heat Sink</string>
    <string name="force_amp">Force Amp</string>
    <string name="multi_hack">Multi-hack</string>
    <string name="turret">Turret</string>
    <string name="xmp_burster">Xmp Burster</string>
    <string name="xmp_burster_level">L%1$s Xmp Burster</string>
    <string name="ultra_strike">Ultra Strike</string>
    <string name="ultra_strike_level">L%1$s Ultra Strike</string>
    <string name="flip_ada">ADA Refactor</string>
    <string name="flip_jarvis">JARVIS Virus</string>
    <string name="resonator">Resonator</string>
    <string name="resonator_level">L%1$s Resonator</string>
    <string name="power_cube">Power Cube</string>
    <string name="power_cube_lawson">Lawson Power Cube</string>
    <string name="power_cube_level">L%1$s Power Cube</string>
    <string name="new_inv_select_lockers">Select Key Lockers:</string>
    <string name="dialog_newinv_title">New Inventory</string>
    <string name="inputlayout_error_emptyname">Name cannot be empty.</string>
    <string name="inputlayout_error_emptyfriendlylocation">Friendly location cannot be empty.</string>
    <string name="inputlayout_error_emptydescription">Description cannot be empty.</string>
    <string name="login_instructions">To access IITK\'s auto-backup, and cross-platform functionality, please log-in with your Google account.</string>
    <string name="nav_portals">Portals</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_field_ops">Field Ops</string>
    <string name="nav_settings">Settings</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign-in</string>
    <string name="button_sign_up">Sign-up</string>
    <string name="clear_all">Clear All</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="open_intel_map_here">Open Intel Map Here</string>
    <string name="google_signin_failed">Authentication with Google failed. Please try again.</string>
    <string name="google_signin_progress">Signing in with Google&#8230;</string>
    <string name="welcome_title">Welcome to IITK!</string>
    <string name="welcome_blurb">Sign-in below to enable cross-platform syncing, and backups of your IITK data.</string>
    <string name="welcome_agreement_blurb">By continuing using \'IITK\' (this app), you agree to the following terms:</string>
    <string name="welcome_agreement">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet nulla mi, sit amet tincidunt arcu congue id. Vivamus tempus sem quis lacus facilisis, ut faucibus nibh egestas. Suspendisse potenti. Cras sollicitudin diam venenatis ligula aliquam molestie. Pellentesque convallis ex et hendrerit hendrerit. Maecenas nibh metus, dictum ac tellus sed, molestie auctor eros. Sed tincidunt laoreet lobortis. Integer libero quam, dapibus sit amet nisi vel, vulputate convallis mauris. Cras rutrum mi nec erat porta efficitur eu non odio. In sem nibh, convallis non sollicitudin at, hendrerit quis neque. Etiam bibendum diam at sapien ullamcorper, vel molestie eros hendrerit. In non lobortis sem. Quisque non convallis libero. Nunc accumsan, enim vel congue malesuada, nisl ligula vulputate nibh, at consequat mauris ex ut sem.
        \n\nEtiam blandit hendrerit consectetur. Sed sit amet felis a sem malesuada eleifend. Proin ultrices neque non vehicula maximus. Maecenas eget metus vulputate, sagittis mauris in, vehicula sapien. Phasellus vel nibh velit. Maecenas non elementum neque, sed efficitur nulla. Nam et dui leo. Ut vitae volutpat orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu ultrices risus. Pellentesque augue tellus, tincidunt sit amet erat ac, tincidunt pellentesque mauris. Donec vulputate justo vel velit venenatis, cursus facilisis tortor rhoncus. Mauris iaculis efficitur nibh, sit amet auctor mi laoreet vitae. Proin finibus iaculis magna, eget mattis lectus mollis a.
        \n\nNullam sed libero lacus. Integer hendrerit dapibus urna, et interdum orci dapibus sit amet. Morbi ac nibh fermentum, euismod ipsum sed, sagittis libero. Cras tempus tempus augue, quis facilisis erat pharetra sit amet. Integer commodo tristique leo a dignissim. Quisque molestie tempor lectus eu condimentum. Sed sed interdum urna. Pellentesque dolor velit, semper et ex a, congue molestie nulla. Pellentesque eget commodo metus. Ut tincidunt odio a enim ullamcorper, sit amet blandit orci commodo.
    </string>
    <string name="menu_start_hover_service">Start Hover Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="inventory_cart">Inventory Cart</string>
    <string name="determining_location">Determining location...</string>
    <string name="determine_location_failed">Failed to determine location.</string>
    <string name="run_action_again">Please run the action again.</string>
    <string name="empty_portals">No Portals to show! Add one below.</string>
    <string name="empty_inventories">No Inventories to display! Add one below.</string>
</resources>