<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inv_all"
            android:title="@string/all"/>
        <item
            android:id="@+id/nav_inv_mods"
            android:title="@string/mods"/>
        <item
            android:id="@+id/nav_inv_keys"
            android:title="@string/portal_keys"/>
        <item
            android:id="@+id/nav_inv_cubes"
            android:title="@string/power_cubes"/>
        <item
            android:id="@+id/nav_inv_resonators"
            android:title="@string/resonators"/>
        <item
            android:id="@+id/nav_inv_weapons"
            android:title="@string/weapons"/>
    </group>
</menu>