<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:padding="@dimen/activity_welcome_padding"
        android:layout_below="@id/login_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_instruction_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_instructions"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_below="@id/login_instruction_tv"
            android:paddingTop="@dimen/fab_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_et"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/login_sign_in_btn"
            android:layout_below="@id/password_et"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/login_sign_up_btn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            style="?android:attr/buttonBarButtonStyle"/>

    </RelativeLayout>
</RelativeLayout>