<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TableRow
        android:padding="@dimen/activity_padding"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:layout_column="1"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center"
            android:src="@drawable/link_amp_rare"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_column="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_amp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rare"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:padding="@dimen/activity_padding"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:layout_column="1"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center"
            android:src="@drawable/link_amp_vr"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_column="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_amp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_rare"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:padding="@dimen/activity_padding"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:layout_column="1"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center"
            android:src="@drawable/link_amp_softbank"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_column="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/softbank_ultra_link"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_rare"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
        </LinearLayout>
    </TableRow>
</TableLayout>