<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.squabbi.iitk.activity.ui.inventory.manage.ManageInventoryViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/checkout_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/inventory_cart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <ImageButton
                android:id="@+id/clear_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_delete_sweep_24px"
                style="?attr/borderlessButtonStyle" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/checkout_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_inventory_item" />

        <LinearLayout
            android:id="@+id/empty_cart_linearlayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_welcome_padding">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:tint="?attr/colorButtonNormal"
                android:src="@drawable/ic_outline_add_shopping_cart_24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/empty_cart" />
        </LinearLayout>

        <Button
            android:id="@+id/checkout_button"
            android:layout_gravity="end|bottom"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_shopping_cart_24px"
            android:drawableTint="@color/primaryTintColor"
            android:text="@string/checkout" />
    </LinearLayout>
</layout>
