<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.PortalViewActivity">
    <data>
        <variable
            name="viewmodel"
            type="com.squabbi.iitk.activity.ui.portalview.PortalViewViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Main edit view -->
        <ScrollView
            android:id="@+id/portaledit_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="@dimen/activity_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Portal name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/portaledit_name_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/portaledit_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName|textCapSentences"
                        android:text="@{viewmodel.portalName}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Portal location using Maps SDK -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/portaledit_location_label_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/portaledit_location_label_textview"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:text="@{viewmodel.portalGeoPointString}"/>
                    </RelativeLayout>

                    <ImageButton
                        android:contentDescription="@string/contentDesc_locationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_outline_my_location_24px"
                        android:onClick="launchPlacePicker"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_outline_done_24px"
            android:transitionName="@string/trans_fab"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>